[tool.poetry]
name = "busy-checker"
version = "0.1.0"
description = ""
authors = ["baconli"]
readme = "README.md"
packages = [{include = "busy_checker"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
python-telegram-bot = "^20.3"
types-requests = "^2.31.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
coverage = "^7.2.7"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
pytest-cov = "^4.1.0"
mypy = "^1.4.1"
gitchangelog = "^3.0.4"
mkdocs = "^1.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
busy_checker = 'busy_checker.__main__:main'
